--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+07/17/2019
+- update liboauth2-sts to include r->user in sts_handler (not used for NGINX right now)
+- version 3.0.2
+
 07/03/2019
 - return status code from STS call: if > 500 (504 = gateway timeout)
 - bump liboauth2 dependency to 1.1.1
