--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+09/12/2019
+- depend on liboauth2 1.2.0 with new request header API
+- bump to 3.1.0
+
 08/01/2019
 - oops: fix swapped source token and user params
 - version 3.0.3
