--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+02/14/2020
+- depend on liboauth 1.2.4 with named cache
+
 02/05/2020
 - depend on liboauth2 1.2.2 with new ROPC capability
 - bump to 3.1.1
