use ngx_pcalloc instead of ngx_pnalloc to align memory access
Signed-off-by: Hans Zandbelt <hans.zandbelt@zmartzone.eu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+06/03/2021
+- use ngx_pcalloc instead of ngx_pnalloc to align memory access
+
 12/22/2020
 - depend on liboauth2 1.4.0
 - release 3.2.0
