--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+07/02/2021
+- add option to not return an error on token missing/exchange failure
+
 06/03/2021
 - use ngx_pcalloc instead of ngx_pnalloc to align memory access
 
