--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+03/08/2023
+- move repo to OpenIDC github organization
+
 12/06/2022
 - change Makefile install procedure
 - depend on liboauth 1.4.5.2
