--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+06/05/2024
+- depend on liboauth2 >= 1.6.2
+- release 3.5.0
+
 06/02/2024
 - don't include standard headers before NGINX headers; closes #2 ; thanks @anpin
   avoid compilation error with NGINX 1.26.0: field 'pkt6' has incomplete type
